--- a/module1.html
+++ b/module1.html
@@ -12,7 +12,7 @@
 
     <p id="one">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste ipsum earum vero autem, sit soluta nesciunt modi. Odit commodi incidunt eos iusto. Officiis vitae reiciendis aut quaerat delectus dicta quisquam!</p>
     <p id="two"> Dolorem sit nulla tempore, placeat veniam voluptas totam! Suscipit consequatur corporis quibusdam fugiat sit? Eaque culpa doloremque architecto consectetur.</p>
-    <p id="three">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt repudiandae eligendi illo cum maiores perspiciatis harum sapiente ab ullam amet <span id="ttt">cumque</span>, saepe, corporis nobis dolore blanditiis quod molestias. Omnis, harum.</p>
+    <p id="three">Lorem ipsum sit amet, consectetur adipisicing. Incidunt repudiandae eligendi illo cum maiores perspiciatis harum sapiente ab ullam amet <span id="ttt">cumque</span>, saepe, corporis nobis dolore blanditiis quod molestias. Omnis, harum.</p>
 
 
     <script type="text/javascript">
@@ -21,7 +21,7 @@
     let secondParagraf = document.getElementById("two");
     let newWords = "Hello world";
     let toBeChanged = document.getElementById("ttt");
-    let changingString = "Первая домашка по JS скоро будет done";
+    let changingString = "Первая домашка по JS будет done";
 
     alert(firstParagraf.textContent);
     document.getElementById("two").innerHTML+=newWords;
